--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ data/coding/country_continent.csv
 data/coding/Gender\ Development\ Index\ (GDI).csv
 data/coding/Gender\ Inequality\ Index\ (GII).csv
 data/coding/UNO-Sex-ratio-age-specific.xlsx
-!manuscript/supplement.docx
+!manuscript/Supplement.docx
