--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ data/coding/Gender\ Development\ Index\ (GDI).csv
 data/coding/Gender\ Inequality\ Index\ (GII).csv
 data/coding/UNO-Sex-ratio-age-specific.xlsx
 !manuscript/Supplement.docx
+!manuscript/PRISMA checklist.docx
