--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ data/coding/Gender\ Inequality\ Index\ (GII).csv
 data/coding/UNO-Sex-ratio-age-specific.xlsx
 !manuscript/Supplement.docx
 !manuscript/PRISMA checklist.docx
-OSF_link
+OSF_link.url
