Added registration protocol

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ data/coding/Gender\ Development\ Index\ (GDI).csv
 data/coding/Gender\ Inequality\ Index\ (GII).csv
 data/coding/UNO-Sex-ratio-age-specific.xlsx
 !manuscript/Supplement.docx
-!manuscript/PRISMA checklist.docx
+!manuscript/PRISMA checklist.doc
+!manuscript/registration\ protocol\ (commented).pdf
 OSF_link.url
