--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ data/coding/Gender\ Inequality\ Index\ (GII).csv
 data/coding/UNO-Sex-ratio-age-specific.xlsx
 PRISMA\ checklist.docx
 OSF_link.url
+registration\ protocol\ (commented).docx
