--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ data/coding/masd_studylist_full.xslx
 data/coding/country_continent.csv
 data/coding/Gender\ Development\ Index\ (GDI).csv
 data/coding/Gender\ Inequality\ Index\ (GII).csv
+data/coding/Sexual\ Violence.xlsx.csv
 data/coding/UNO-Sex-ratio-age-specific.xlsx
 PRISMA\ checklist.docx
 OSF_link.url
